@@ -72,6 +72,7 @@ struct SCIP_Set
    SCIP_RELAX**          relaxs;             /**< relaxators */
    SCIP_SEPA**           sepas;              /**< separators */
    SCIP_PROP**           props;              /**< propagators */
+   SCIP_PROP**           props_presol;       /**< propagators (sorted by presol priority) */
    SCIP_HEUR**           heurs;              /**< primal heuristics */
    SCIP_COMPR**          comprs;             /**< tree compressions */
    SCIP_EVENTHDLR**      eventhdlrs;         /**< event handlers */
@@ -136,7 +137,7 @@ struct SCIP_Set
    SCIP_Bool             sepassorted;        /**< are the separators sorted by priority? */
    SCIP_Bool             sepasnamesorted;    /**< are the separators sorted by name? */
    SCIP_Bool             propssorted;        /**< are the propagators sorted by priority? */
-   SCIP_Bool             propspresolsorted;  /**< are the propagators sorted by priority for presolving? */
+   SCIP_Bool             propspresolsorted;  /**< are the propagators in prop_presol sorted? */
    SCIP_Bool             propsnamesorted;    /**< are the propagators sorted by name? */
    SCIP_Bool             heurssorted;        /**< are the heuristics sorted by priority? */
    SCIP_Bool             heursnamesorted;    /**< are the heuristics sorted by name? */
