@@ -168,6 +168,8 @@ fixed bugs:
   is the same as at the last focus node
 - fixed memory bug in SCIP_DIGRAPH
 - fixed bug while changing the objective value of an original value after transforming the problem
+- fixed bug with sorting of propagators in presolving: the order can be changed by calling probing; thus, there is a copy of the
+  propagators, which is sorted by presolving
 
 misc:
 - dropped support for Ipopt < 3.11
